// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItemSwitch should update the state and close the menu once clicked 1`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item rmd-input-toggle-menu-item--switch"
  id="menu-id-1"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-switch rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
  >
    <span
      class="rmd-switch__ball"
    />
  </span>
  <span
    class="rmd-list-item__text"
  >
    Switch
  </span>
</li>
`;

exports[`MenuItemSwitch should update the state and close the menu once clicked 2`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item rmd-input-toggle-menu-item--switch"
  id="menu-id-1"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-switch rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
  >
    <span
      class="rmd-switch__ball rmd-switch__ball--checked"
    />
  </span>
  <span
    class="rmd-list-item__text"
  >
    Switch
  </span>
</li>
`;
